# SimdIntroArticle

./: .gitignore  LICENSE  README.md  common.h
DotProduct/: CMakeLists.txt  DotProduct.sln  DotProduct.vcxproj  DotProduct.vcxproj.filters  dotproduct.h  dpps.cpp  main.cpp  misc.cpp  scalar.cpp  stdafx.h  vertical.cpp
FloodFill/: Arguments.cpp  Arguments.h  CMakeLists.txt  FloodFill.sln  FloodFill.vcxproj  FloodFill.vcxproj.filters  floodFill.h  main.cpp  misc.hpp  stdafx.h
FloodFill/IO/: Image.cpp  Image.h  Image.save.cpp
FloodFill/Scalar/: scanline.cpp
FloodFill/Vector/: Bitmap.cpp  Bitmap.ctor.cpp  Bitmap.fill.cpp  Bitmap.h  PixelComparer.hpp  loadSome.hpp  vectorFill.cpp
Grayscale/: CMakeLists.txt  Grayscale.sln  Grayscale.vcxproj  Grayscale.vcxproj.filters  grayscale.h  main.cpp  misc.cpp  scalar.cpp  stdafx.h  vecFloat.cpp  vecInt16.cpp
