cmake_minimum_required (VERSION 3.9)
project (dotproduct CXX)
include(CheckIPOSupported)
check_ipo_supported()
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -m64 -O3 -march=native")
add_executable (dotproduct dpps.cpp main.cpp misc.cpp scalar.cpp vertical.cpp)
set_property(TARGET dotproduct PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
