cmake_minimum_required (VERSION 3.9)
project (floodfill CXX)
include(CheckIPOSupported)
check_ipo_supported()
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -m64 -O3 -march=native -Wno-ignored-attributes")
set(CMAKE_INCLUDE_CURRENT_DIR ON)
add_executable (floodfill IO/Image.cpp IO/Image.save.cpp Scalar/scanline.cpp Vector/Bitmap.cpp Vector/Bitmap.ctor.cpp Vector/Bitmap.fill.cpp Vector/vectorFill.cpp Arguments.cpp main.cpp)
set_property(TARGET floodfill PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
