cmake_minimum_required (VERSION 3.9)
project (grayscale CXX)
include(CheckIPOSupported)
check_ipo_supported()
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -m64 -O3 -march=native")
add_executable (grayscale main.cpp misc.cpp scalar.cpp vecFloat.cpp vecInt16.cpp)
set_property(TARGET grayscale PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
